update notify name to flexion

--- a/app/assets/error_pages/5xx.html
+++ b/app/assets/error_pages/5xx.html
@@ -49,7 +49,7 @@
           </span>
 
           <span class="usa-header__product-name">
-            Notify
+            Flexion Messaging
           </span>
 
         </a>
@@ -68,7 +68,7 @@
           <p class="usa-body">
             Try again later.
           </p>
-          <p>To report a problem you can email us at <a class="usa-link" href="mailto:notify-support@gsa.gov">notify-support@gsa.gov</a>.</p>
+          <p>To report a problem you can <a class="usa-link" href="https://solution.flexion.us/contact/">contact us</a>.</p>
           <p>You can expect a response within one business day.</p>
         </div>
       </div>
